track morgan@1.10.0 in package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
+    "morgan": "1.10.0",
     "nodemon": "^2.0.14"
   }
 }
